Simplify session tracking